<resources>
    <string name="app_name">projektDyplomowyAnkiety</string>
    <string name="emailStr">E-Mail</string>
    <string name="passwordStr">Hasło</string>
    <string name="logInStr">Zaloguj</string>
    <string name="registerStr">Załóż konto</string>
    <string name="registerQuestionStr">Nie masz konta? Załóż je.</string>
    <string name="loginQuestionStr">Masz już konto. Zaloguj się.</string>
    <string name="strMainPage">Strona główna</string>
    <string name="strCompleteSurvey">Wypełnij ankietę</string>
    <string name="strSettings">Ustawienia</string>
    <string name="strLogout">Wyloguj</string>
    <string name="strCreateSurvey">Stwórz ankietę</string>
    <string name="strYes">Tak</string>
    <string name="strNo">Nie</string>
    <string name="strlogOutQuest">Czy chcesz się wylogować?</string>
    <string name="strSurveyName">Nazwa ankiety</string>
    <string name="strPodajPytanie">Podaj pytanie</string>
    <string name="strJZW">Jedna z wielu</string>
    <string name="strKZW">Kilka z wielu</string>
    <string name="strO">Opis</string>
    <string name="strAnswer">Odpowiedź</string>
    <string name="strFill">Wypełnij Ankietę</string>
    <string name="strWarning">Ostrzeżenie.</string>
    <string name="strAgainFillSurv">"Ponowne wypełnienie ankiety spowoduje usunięcie poprzedniej z tego dnia. Czy chcesz ją wypełnić?"</string>
    <string name="surName">"Nazwa ankiety: "</string>
    <string name="csvFileName">"Podaj nazwe pliku CLS"</string>
    <string name="csvHintFileName">"Nazwa pliku"</string>
    <string name="csvGenerate">"Wygeneruj"</string>
    <string name="strBack">"Cofnij"</string>
    <string name="completeCSVname">"Podaj nazwe pliku"</string>
    <string name="countOfQues">"Liczba pytań: "</string>
    <string name="addQuestion">"DODAJ PYTANIE"</string>
    <string name="strCreateSurvEmptyName">Nie podano nazwy ankiety.</string>
    <string name="strNotAddQuestion">"Brak pytań."</string>
    <string name="strNotAddQuestionAndemptyName">"Brak pytań, oraz pusta nazwa ankiety."</string>
    <string name="strAddQuestion">"Dodaj pytanie"</string>
    <string name="strAddAnser">"Dodaj odpowiedź"</string>
    <string name="strAllAnswMust">"Wszystkie odpowiedzi muszą być wypełnione"</string>
    <string name="strNoQuestionName">"Brak nazwy pytania"</string>
    <string name="strNoQuestionType">"Brak rodzaju odpowiedzi"</string>
    <string name="strNoaddQuest">"Brak dodanych odpowiedzi"</string>
    <string name="strNoAnswer">"Brak odpowiedzi."</string>
    <string name="deleteComplete">Pomyślnie usunięto</string>
    <string name="noSurvToDelete">Brak ankiet do usunięcia</string>
    <string name="strSurvCreated">Ankieta została utworzona</string>
    <string name="strDeletSurvey1">Po usunięciu nie będzie dostępna do wypełniania, lecz wypełnione ankiety pozostaną bez zmian. Czy na pewno chcesz usunąć?</string>
    <string name="strDo">Wykonaj</string>
    <string name="strEditQuestion">Edytuj pytanie</string>
    <string name="quesUpdated">Pytanie zaktualizowane</string>
    <string name="strdeleteNotif">Czy na pewno chcesz usunąć dane powiadomienie?</string>
    <string name="strNoQuestions">Brak pytań</string>
    <string name="strPassRemeber">Przypominanie hasła.</string>
    <string name="strNewPass">Podaj nowe hasło</string>
    <string name="strOldPass">Podaj stare hasło</string>
    <string name="strGiveemail">Podaj adres e-mail</string>
    <string name="strSend">Wyślij</string>
    <string name="strNoRegistredUserwithThisEEmail">Brak zarejestrowanego użytkownika z podanym adresem.</string>
    <string name="badlyCorrectedEmail">Błędnie sformatowany adres email.</string>
    <string name="noInternetConnection1">Brak sieci. Dane nie zostaną zaktualizowane.</string>

</resources>
