<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EntryActivity"
    android:background="@drawable/login_background">

    <LinearLayout
        android:id="@+id/entLin2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   android:textColor="@color/colTextEdit"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/emailStr"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edTextPassword"
                    android:layout_width="match_parent"
                    android:textColor="@color/colTextEdit"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/passwordStr"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_background"
            android:text="@string/logInStr"
            android:layout_height="wrap_content"
            ></Button>

        <Button
            android:id="@+id/btnQuestRegister"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_background"
            android:text="@string/registerQuestionStr"
            android:layout_height="wrap_content"
            ></Button>
    </LinearLayout>
</LinearLayout>
