<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edTextSurveyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/strSurveyName"
            android:inputType="textEmailAddress"
            android:textColor="@color/colblack" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnAddQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputlay"
        android:layout_marginLeft="15dp"
        android:background="#7a2423"
        android:drawableLeft="@drawable/icon_add_size"
        android:drawablePadding="10dip"
        android:padding="16dp"
        android:paddingLeft="30dip"
        android:paddingRight="26dip"
        android:singleLine="true"
        android:text="@string/addQuestion"
        android:textColor="#ffffff"
        android:textSize="12sp" />

<!-- Ustawic wysokośc -->
    <ScrollView
        android:id="@+id/scrolViewQuestion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layA"
        android:layout_below="@+id/btnAddQuestion"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linlayInScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/noQuest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strNoQuestions"
                android:gravity="center"
                android:textSize="30sp"
                android:layout_marginTop="20dp"></TextView>

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/layA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center|bottom"
        android:orientation="vertical">


        <Button
            android:id="@+id/btnCreateSurvey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#991823"
            android:drawableRight="@drawable/icon_create_survey_size"
            android:paddingLeft="100dip"
            android:paddingRight="100dp"
            android:singleLine="true"
            android:text="@string/strCreateSurvey"
            android:textColor="#ffffff"
            android:textSize="12sp" />

    </LinearLayout>
</RelativeLayout>